# new_neconf2

./: README.md  build.sh  env.sh  netopeer2.sh  opt.sh  opt1.sh
all/libnetconf2/_install/include/libnetconf2/: config.h
all/libnetconf2/_install/lib/: libnetconf2.so.1.3.5
all/libnetconf2/include/libnetconf2/: config.h
all/libssh/lib/: libssh.so.4  libssh.so.4.8.3
all/libyang/_install/lib/: libyang.so.1  libyang.so.1.8.4
all/libyang/lib/: libyang.so.1.8.4
all/openssl/include/openssl/: opensslconf.h
all/openssl/lib/: libcrypto.so.1.1  libssl.so.1.1
all/openssl/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
all/sysrepo/_install/lib/: libsysrepo.so.5.5.8
all/sysrepo/_install/lib/pkgconfig/: sysrepo.pc
all/sysrepo/lib/: libsysrepo.so.5.5.8
doc/: a.c  a.out
docker/: Dockerfile  err.txt
lib/: libnetconf2.so.1  libnetconf2.so.1.3.5  libsysrepo.so.5  libyang.so.1.8.4
lib/cmake/libssh/: libssh-config-noconfig.cmake  libssh-config-version.cmake  libssh-config.cmake
lib/pkgconfig/: libnetconf2.pc  sysrepo.pc
libnetconf2/: build.sh  build1.sh  build2.sh  make-libnetconf2.sh
libnetconf2/_install/include/: nc_client.h  nc_server.h
libnetconf2/src/: config.h.in  session_server.c  session_server_ssh.c
libssh-0.9.2/: build1.sh  make-libssh.sh
libssh-0.9.2/lib/: CMakeLists.txt  compile_commands.json
libssh-0.9.2/lib/debug/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  compile_commands.json  install_manifest.txt
libssh-0.9.2/lib/debug/lib/: libssh.so.4.8.3
libssh-0.9.2/lib/debug/output/: Makefile  cmake_install.cmake  config.h  libssh.pc
libssh-0.9.2/lib/debug/output/doc/: Doxyfile.docs  Makefile  cmake_install.cmake
libssh-0.9.2/lib/debug/output/examples/: Makefile  cmake_install.cmake  exec  keygen  libssh_scp  libsshpp  libsshpp_noexcept  samplesftp  samplesshd-kbdint  scp_download  senddata  ssh-client  ssh_server_fork  sshnetcat
libssh-0.9.2/lib/debug/output/include/: Makefile  cmake_install.cmake
libssh-0.9.2/lib/debug/output/include/libssh/: Makefile  cmake_install.cmake
libssh-0.9.2/lib/debug/output/src/: Makefile  cmake_install.cmake
libyang/: CMakeLists.txt  build.sh  build1.sh  build2.sh
libyang/_install/lib/pkgconfig/: libyang.pc
netopeer2/: CMakeLists.txt  build.sh  build1.sh  build2.sh
netopeer2/cli/: CMakeLists.txt  commands.c
netopeer2/debug/: CMakeCache.txt  Makefile  cmake_install.cmake  config.h
netopeer2/debug/build-packages/: debian.control  debian.postinst  debian.rules  netopeer2.dsc  netopeer2.spec
netopeer2/debug/cli/: Makefile  cmake_install.cmake
netopeer2/scripts/: setup.sh
netopeer2/src/: main.c  netconf.c  netconf_monitoring.c  netconf_server.c
scripts/: merge_config.sh  merge_hostkey.sh  readme.txt  setup.sh
shm/: sr_ext  sr_ietf-keystore.running  sr_ietf-netconf-acm.running  sr_ietf-netconf-server.running  sr_ietf-truststore.running  sr_main  sr_yang.running
shm_example/: .cli.c.swp  a.out  cli  cli.c  ser  ser.c
sysrepo/: CMakeLists.txt  build.sh  build1.sh  build2.sh
sysrepo/_install/lib/: libsysrepo.so.5  libsysrepo.so.5.5.8
sysrepo/_install/lib/pkgconfig/: sysrepo.pc
sysrepo/examples/: CMakeLists.txt  application_changes_example.c  build2.sh
sysrepo/examples/plugin/: oven.c
sysrepo/examples/plugin_test/: open.c  open.yang
sysrepo/examples/plugin_wdm/: mnt.sh  open_wdm.c  open_wdm.yang
sysrepo/src/: common.c  sysrepo.c
sysrepo/src/executables/: sysrepo-plugind.c
